--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -28,13 +28,7 @@
 					<div class="logo">
 						<a href="index.html"><img src="static/images/logo.png"/></a>
 					</div>
-					<nav class="top-nav">
-						<ul class="top-nav">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="blogs.html">Blogs</a></li>
-						</ul>
-						<a href="#" id="pull"><img src="static/images/nav-icon.png" title="menu" /></a>
-					</nav>
+					<h1 class="pull-right" style="line-height: 45px; font-size: 25px;"><a href="index.html" style="color: #fff; text-decoration: none;">Home</a></h1>
 					<div class="clearfix"> </div>
 					<h1 class="text-center">My Blogs</h1>
 				</div>
@@ -54,7 +48,7 @@
 		</div>	
 		<div class="copy-right text-center">
 			<div class="container">
-				<p>Made by Meng Li. <a href="admin.html">Manage My Blog</a></p>
+				<p>Made by Meng Li. <a href="admin.html" target="_blank">Manage My Blog</a></p>
 				<label>Copyright of Meng Li @ 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
 			</div>
 		</div>
