--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -22,16 +22,7 @@
 					<div class="logo">
 						<a href="index.html"><img src="static/images/logo.png"/></a>
 					</div>
-					<nav class="top-nav">
-						<ul class="top-nav">
-							<li class="active"><a href="#home" class="scroll">About</a><span> </span></li>
-							<li><a href="#works" class="scroll">Work</a></li>
-							<li><a href="#contact" class="scroll">Contact</a></li>
-							<li><a href="blogs.html" class="">Blogs</a></li>
-						</ul>
-						<a href="#" id="pull"><img src="static/images/nav-icon.png" title="menu" /></a>
-					</nav>
-					<div class="clearfix"> </div>
+					<h1 class="pull-right" style="line-height: 65px; font-size: 25px;"><a href="blogs.html" style="color: #fff; text-decoration: none;">Blogs</a></h1>
 					<div class="top-header-info">
 						<p>
 							Hello,<br/>
@@ -113,7 +104,7 @@
 		</div>
 		<div class="copy-right text-center">
 			<div class="container">
-				<p>Made by Meng Li. <a href="admin.html">Manage My Blog</a></p>
+				<p>Made by Meng Li. <a href="admin.html" target="_blank">Manage My Blog</a></p>
 				<label>Copyright of Meng Li @ 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
 			</div>
 		</div>
