--- a/WebContent/add.html
+++ b/WebContent/add.html
@@ -2,15 +2,20 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Manage My Blogs</title>
+        <title>Add a Blog</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="Shortcut Icon" href="static/images/favicon.ico">
         <link href="static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="static/css/summernote.min.css" rel="stylesheet">
+        <link href="static/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
         <link href="static/css/font-awesome.min.css" rel="stylesheet">
         <link href="static/css/summernote.min.css" rel="stylesheet">
         <link href="static/css/mengular.css" rel="stylesheet">
-        <link href="static/css/manageBlogs.css" rel="stylesheet">
+        <link href="static/css/add.css" rel="stylesheet">
         <script src="static/js/jquery.min.js"></script> 
         <script src="static/js/jquery.bootstrap.min.js"></script>
+        <script src="static/js/bootstrap-datetimepicker.min.js"></script>
+        <script src="static/js/bootstrap-datetimepicker.zh-CN.js"></script>
         <script src="static/js/bootstrap.min.js"></script> 
         <script src="static/js/summernote.min.js"></script>
         <script src="static/js/mengular-2.0.js"></script>
@@ -18,7 +23,7 @@
         <script src="dwr/engine.js"></script>
         <script src="dwr/interface/AdminManager.js"></script>
         <script src="dwr/interface/BlogManager.js"></script>
-        <script src="static/js/manageBlogs.js"></script>
+        <script src="static/js/add.js"></script>
     </head>
     <body>
         <div class="container">
@@ -26,58 +31,40 @@
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed glyphicon glyphicon-th-list" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"></button>
-                        <a class="navbar-brand" href="javascript:history.go(0)">Blog</a>
+                        <a class="navbar-brand" href="javascript:history.go(0)">Blog System</a>
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul id="list-nav" class="nav navbar-nav logined-btn">
-                            <li class="active"><a href="manageBlogs.html">Manage Blogs</a></li>
+                            <li><a href="list.html">List</a></li>
+                            <li class="active"><a href="add.html">Add</a></li>
                         </ul>
                         <ul id="list-nav" class="nav navbar-nav navbar-right">
-                            <li><a href="index.html" target="_blank">HomePage</a></li>
+                            <li><a href="blogs.html" target="_blank">Blogs</a></li>
                             <li><a href="LogoutServlet?task=adminLogout">Exit</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
-            <div id="blogs-panel" class="panel panel-default">
-                <div class="panel-heading">
-                    <h1 class="panel-title">My Blog List</h1>
-                </div>
-                <table id="blog-list" class="table">
-                    <thead>
-                        <tr>
-                            <th>Create Date</th>
-                            <th>Title</th>
-                            <th>Edit</th>
-                            <th>Delete</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr id="${bid}$" class="mengular-template blog-list-template">
-                            <td>${date}$</td>
-                            <td class="blog-list-title">${title}$</td>
-                            <td class="blog-list-edit">
-                                <a href="edit.html?bid=${bid}$"><i class="fa fa-gear fa-lg text-success"></i></a>
-                            </td>
-                            <td class="blog-list-delete"><i class="fa fa-trash-o fa-lg text-danger"></i></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
             <div class="page-header">
-                <h3>Add a Blog</h3>
+                <h3 class="text-center text-muted">Add a Blog</h3>
             </div>
             <div id="add-blog-div" class="row">
-                <div class="col-xs-12 col-sm-8">
+                <div class="col-xs-12 col-sm-5 col-md-7">
                     <div class="input-group">
                         <span class="input-group-addon form-icon"><i class="fa fa-font fa-lg"></i></span>
                         <input id="add-blog-title" type="text" class="form-control" placeholder="Blog Title">
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-2">
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <div class="input-group">
+                        <span class="input-group-addon form-icon"><i class="fa fa-calendar fa-lg"></i></span>
+                        <input id="add-blog-date" type="text" class="form-control" placeholder="Create Date" readonly>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-sm-2 col-md-1">
                     <button id="add-blog-clear" class="btn btn-block btn-default">Clear</button>
                 </div>
-                <div class="col-xs-12 col-sm-2">
+                <div class="col-xs-6 col-sm-2 col-md-1">
                     <button id="add-blog-submit" class="btn btn-block btn-success">Create</button>
                 </div>
                 <div class="col-xs-12">
