--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -25,7 +25,7 @@
     <body>
         <div id="main-container" class="container">
         	<h1 class="text-center text-success"><i class="fa fa-bold"></i></h1>
-            <h2 class="text-center text-info">Blog System Management</h2>
+            <h3 class="text-center text-success">Blog System Management</h3>
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-4">
                     <div class="input-group">
