--- a/WebContent/list.html
+++ b/WebContent/list.html
@@ -2,26 +2,24 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Edit Blog</title>
+        <title>Manage My Blogs</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <link rel="Shortcut Icon" href="static/images/favicon.ico">
         <link href="static/css/bootstrap.min.css" rel="stylesheet">
         <link href="static/css/font-awesome.min.css" rel="stylesheet">
         <link href="static/css/summernote.min.css" rel="stylesheet">
-        <link href="static/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
         <link href="static/css/mengular.css" rel="stylesheet">
-        <link href="static/css/edit.css" rel="stylesheet">
+        <link href="static/css/list.css" rel="stylesheet">
         <script src="static/js/jquery.min.js"></script> 
         <script src="static/js/jquery.bootstrap.min.js"></script>
         <script src="static/js/bootstrap.min.js"></script> 
-        <script src="static/js/bootstrap-datetimepicker.min.js"></script>
-        <script src="static/js/bootstrap-datetimepicker.zh-CN.js"></script>
         <script src="static/js/summernote.min.js"></script>
         <script src="static/js/mengular-2.0.js"></script>
         <script src="static/js/tools.js"></script>
         <script src="dwr/engine.js"></script>
-        <script src="dwr/interface/BlogManager.js"></script>
         <script src="dwr/interface/AdminManager.js"></script>
-        <script src="static/js/edit.js"></script>
+        <script src="dwr/interface/BlogManager.js"></script>
+        <script src="static/js/list.js"></script>
     </head>
     <body>
         <div class="container">
@@ -33,7 +31,7 @@
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul id="list-nav" class="nav navbar-nav logined-btn">
-                            <li><a href="list.html">List</a></li>
+                            <li class="active"><a href="list.html">List</a></li>
                             <li><a href="add.html">Add</a></li>
                         </ul>
                         <ul id="list-nav" class="nav navbar-nav navbar-right">
@@ -44,35 +42,20 @@
                 </div>
             </nav>
             <div class="page-header">
-                <h3 class="text-center text-muted">Edit Blog</h3>
+                <h3 class="text-center text-muted">Blog List</h3>
+                <a href="add.html"><i class="fa fa-plus fa-lg pull-right add-icon" style="margin-top: -27px; margin-right: 15px;"></i></a>
             </div>
-            <div id="edit-blog-div" class="row">
-                <div class="col-xs-12 col-sm-5 col-md-7">
-                    <div class="input-group">
-                        <span class="input-group-addon form-icon"><i class="fa fa-font fa-lg"></i></span>
-                        <input id="edit-blog-title" type="text" class="form-control" placeholder="Blog Title">
+            <div id="blog-list" class="list-group">
+                <div id="${bid}$" class="list-group-item mengular-template blog-list-template">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-2">${date}$</div>
+                        <div class="col-xs-12 col-sm-8">${title}$</div>
+                        <div class="col-xs-1 col-sm-1"><a href="edit.html?bid=${bid}$"><i class="fa fa-gear fa-lg text-success"></i></a></div>
+                        <div class="col-xs-1 col-sm-1"><i class="fa fa-trash-o fa-lg text-danger"></i></div>
                     </div>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3">
-                    <div class="input-group">
-                        <span class="input-group-addon form-icon"><i class="fa fa-calendar fa-lg"></i></span>
-                        <input id="edit-blog-date" type="text" class="form-control" placeholder="Create Date" readonly>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-2 col-md-1">
-                    <button id="edit-blog-clear" class="btn btn-block btn-default">Clear</button>
-                </div>
-                <div class="col-xs-6 col-sm-2 col-md-1">
-                    <button id="edit-blog-submit" class="btn btn-block btn-success">Save</button>
-                </div>
-                <div class="col-xs-12">
-                    <div id="loading-blog">
-                        <h1 class="text-info text-center"><i class="fa fa-spinner fa-6 fa-spin" style="font-size: 4em;"></i></h1>
-                        <h4 class="text-info text-center">Loading this blog article...</h4>
-                    </div>
-                    <div id="edit-blog-content"></div>
                 </div>
             </div>
+
         </div>
     </body>
 </html>
