博客列表页面加入分页功能

--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -34,18 +34,23 @@
 				</div>
 			</div>
 		</div>
-		<div id="blog-list" class="container">
-			<div id="${bid}$" class="bs-callout mengular-template blog-list-template">
-				<div class="row">
-					<div class="col-xs-12 col-sm-10">
-						<h4 class="text-primary">${title}$</h4>
-					</div>
-					<div class="col-xs-12 col-sm-2">
-						<h4 class="pull-right text-muted">${date}$</h4>
+		<div class="container">
+			<div id="blog-list">
+				<div id="${bid}$" class="bs-callout mengular-template blog-list-template">
+					<div class="row">
+						<div class="col-xs-12 col-sm-8 col-md-10">
+							<h4 class="text-primary">${title}$</h4>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-2">
+							<h4 class="pull-right text-muted">${date}$</h4>
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>	
+			</div>	
+			<nav id="page-nav" class="text-center">
+                <ul class="pagination"></ul>
+            </nav>
+		</div>
 		<div class="copy-right text-center">
 			<div class="container">
 				<p>Made by Meng Li. <a href="admin.html" target="_blank">Manage My Blog</a></p>
