按标题搜索博客；管理员博文列表标题的链接

--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -7,6 +7,7 @@
 		<link rel="Shortcut Icon" href="static/images/favicon.ico">
 		<link href="static/css/bootstrap.min.css" rel="stylesheet"/>
 		<link href="static/css/bootstrap.photo.css" rel="stylesheet"/>
+		<link href="static/css/font-awesome.min.css" rel="stylesheet">
 		<link href="static/css/docs.min.css" rel="stylesheet"/>
 		<link href="static/css/style.css" rel="stylesheet"/>
 		<link href="static/css/mengular.css" rel="stylesheet"/>
@@ -35,6 +36,10 @@
 			</div>
 		</div>
 		<div class="container">
+			<div id="search-header" class="page-header">
+				<input id="search-blog" type="text" placeholder="Search Title" class="text-info text-center">
+				<i id="search-cancel" class="fa fa-times-circle-o fa-lg pull-right text-muted"></i>
+			</div>
 			<div id="blog-list">
 				<div id="${bid}$" class="bs-callout mengular-template blog-list-template">
 					<div class="row">
