--- a/WebContent/edit.html
+++ b/WebContent/edit.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Edit Blog</title>
+        <link rel="Shortcut Icon" href="static/images/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href="static/css/bootstrap.min.css" rel="stylesheet">
         <link href="static/css/font-awesome.min.css" rel="stylesheet">
