--- a/WebContent/list.html
+++ b/WebContent/list.html
@@ -49,13 +49,12 @@
                 <div id="${bid}$" class="list-group-item mengular-template blog-list-template">
                     <div class="row">
                         <div class="col-xs-12 col-sm-2">${date}$</div>
-                        <div class="col-xs-12 col-sm-8">${title}$</div>
+                        <div class="col-xs-12 col-sm-8"><a href="blog.html?bid=${bid}$" target="_blank">${title}$</a></div>
                         <div class="col-xs-1 col-sm-1"><a href="edit.html?bid=${bid}$"><i class="fa fa-gear fa-lg text-success"></i></a></div>
                         <div class="col-xs-1 col-sm-1"><i class="fa fa-trash-o fa-lg text-danger"></i></div>
                     </div>
                 </div>
             </div>
-
         </div>
     </body>
 </html>
