--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -43,11 +43,11 @@
 			<div id="blog-list">
 				<div id="${bid}$" class="bs-callout mengular-template blog-list-template">
 					<div class="row">
-						<div class="col-xs-12 col-sm-8 col-md-10">
+						<div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
 							<h4 class="text-primary">${title}$</h4>
 						</div>
-						<div class="col-xs-12 col-sm-4 col-md-2">
-							<h4 class="pull-right text-muted">${date}$</h4>
+						<div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+							<h4 class="text-muted">${date}$, <strong class="text-danger">${readers}$</strong> readers</h4>
 						</div>
 					</div>
 				</div>
