--- a/WebContent/edit.html
+++ b/WebContent/edit.html
@@ -67,9 +67,11 @@
                     <button id="edit-blog-submit" class="btn btn-block btn-success">Save</button>
                 </div>
                 <div class="col-xs-12">
-                    <div id="loading-blog">
-                        <h1 class="text-info text-center"><i class="fa fa-spinner fa-6 fa-spin" style="font-size: 4em;"></i></h1>
-                        <h4 class="text-info text-center">Loading this blog article...</h4>
+                    <div id="loading-blog" class="panel panel-default">
+                    	<div	class="panel-body">
+                    	    <h1 class="text-info text-center"><i class="fa fa-spinner fa-6 fa-spin" style="font-size: 4em;"></i></h1>
+                       		<h4 class="text-info text-center">Loading this blog article...</h4>
+                    	</div>
                     </div>
                     <div id="edit-blog-content"></div>
                 </div>
