博文页引入模板引擎加载

--- a/WebContent/blog.html
+++ b/WebContent/blog.html
@@ -29,19 +29,15 @@
 					<div class="logo">
 						<a href="index.html"><img src="static/images/logo.png"/></a>
 					</div>
-					<h1 class="pull-right" style="line-height: 45px; font-size: 25px;"><a href="index.html" style="color: #fff; text-decoration: none;">Home</a></h1>
+					<h1 class="pull-right"><a href="blogs.html">Blogs</a></h1>
 					<div class="clearfix"> </div>
-					<h2 id="blog-title" class="text-center"></h2>
-					<h4 class="text-center">Create in <span id="blog-date"></span>, <span id="blog-readers"></span> readers</h4>
+					<h2 class="text-center">#{blog-title}</h2>
+					<h4 class="text-center">Create in #{blog-date}, <span id="blog-readers"></span> readers</h4>
 				</div>
 			</div>
 		</div>
 		<div class="container">
-			<div id="loading-blog">
-				<h1 class="text-info text-center"><i class="fa fa-spinner fa-6 fa-spin" style="font-size: 4em;"></i></h1>
-				<h4 class="text-info text-center">Loading this blog article...</h4>
-			</div>
-			<div id="blog-content" ></div>
+			<div id="blog-content">#{blog-content}</div>
 			<div class="page-header">
                 <h3 class="text-info">Visitor Comments</h3>
             </div>
