--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -29,7 +29,7 @@
 					<div class="logo">
 						<a href="index.html"><img src="static/images/logo.png"/></a>
 					</div>
-					<h1 class="pull-right" style="line-height: 45px; font-size: 25px;"><a href="index.html" style="color: #fff; text-decoration: none;">Home</a></h1>
+					<h1 class="pull-right home"><a href="index.html">Home</a></h1>
 					<div class="clearfix"> </div>
 					<h1 class="text-center">My Blogs</h1>
 				</div>
