--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,6 +8,7 @@
 		<link href="static/css/bootstrap.min.css" rel="stylesheet"/>
 		<link href="static/css/bootstrap.photo.css" rel="stylesheet"/>
 		<link href="static/css/style.css" rel="stylesheet"/>
+		<link href="static/css/index.css" rel="stylesheet"/>
 		<script src="static/js/jquery.min.js"></script>
 		<script src="static/js/bootstrap.min.js"></script>
 		<script src="static/js/bootstrap.photo.js"></script>
@@ -20,7 +21,7 @@
 					<div class="logo">
 						<a href="index.html"><img src="static/images/logo.png"/></a>
 					</div>
-					<h1 class="pull-right" style="line-height: 65px; font-size: 25px;"><a href="blogs.html" style="color: #fff; text-decoration: none;">Blogs</a></h1>
+					<h1 class="pull-right home"><a href="blogs.html">Blogs</a></h1>
 					<div class="top-header-info">
 						<p>
 							Hello,<br/>
