--- a/WebContent/list.html
+++ b/WebContent/list.html
@@ -35,6 +35,7 @@
                             <li><a href="add.html">Add</a></li>
                         </ul>
                         <ul id="list-nav" class="nav navbar-nav navbar-right">
+                        	<li><a href="javascript:void(0)"onclick="regenerate()">Regenerate</a></li>
                             <li><a href="blogs.html" target="_blank">Blogs</a></li>
                             <li><a href="LogoutServlet?task=adminLogout">Exit</a></li>
                         </ul>
