修复管理员博文列表页面打开博文路径错误；修复根路径在Windows Server 2008的bug

--- a/WebContent/list.html
+++ b/WebContent/list.html
@@ -51,7 +51,7 @@
                 <div id="${bid}$" class="list-group-item mengular-template blog-list-template">
                     <div class="row">
                         <div class="col-xs-12 col-sm-2">${date}$</div>
-                        <div class="col-xs-12 col-sm-8"><a href="blog.html?bid=${bid}$" target="_blank"><span class="blog-list-title">${title}$</span></a></div>
+                        <div class="col-xs-12 col-sm-8"><a href="blogs/${bid}$" target="_blank"><span class="blog-list-title">${title}$</span></a></div>
                         <div class="col-xs-12 col-sm-2">
                             <a href="edit.html?bid=${bid}$" class="blog-accessory"><i class="fa fa-gear fa-lg text-success"></i></a>
                             <span class="blog-list-delete"><i class="fa fa-trash-o fa-lg text-danger blog-accessory"></i></span>
