首页添加博客和github链接，添加description

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Meng Li's Home Page</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<meta name="description" content="This is Meng Li's home page, you can visit my github, works and read my blogs. Have a awesome day!">
 		<link rel="Shortcut Icon" href="static/images/favicon.ico">
 		<link href="static/css/bootstrap.min.css" rel="stylesheet"/>
 		<link href="static/css/bootstrap.photo.css" rel="stylesheet"/>
@@ -30,6 +31,8 @@
 							Based in Tsukuba, Ibaraki, Japan.<br/>
 						</p>
 						<a class="contactme" href="#contact">CONTACT ME</a>
+						<a class="contactme" href="blogs.html">MY BLOGS</a>
+						<a class="contactme" href="https://github.com/lm2343635">MY GITHUB</a>
 					</div>
 				</div>
 			</div>
