把管理员文件移到admin目录下

--- a/WebContent/admin/index.html
+++ b/WebContent/admin/index.html
@@ -5,22 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Admin</title>
-        <link href="static/images/favicon.ico" type="image/x-icon" rel="icon"> 
-        <link href="static/css/bootstrap.min.css" rel="stylesheet">
-        <link href="static/css/font-awesome.min.css" rel="stylesheet">
-        <link href="static/css/admin.css" rel="stylesheet">
+        <link href="../static/images/favicon.ico" type="image/x-icon" rel="icon"> 
+        <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../static/css/font-awesome.min.css" rel="stylesheet">
+        <link href="../static/css/admin.css" rel="stylesheet">
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
         <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
-        <script src="static/js/jquery.min.js"></script>
-        <script src="static/js/bootstrap.min.js"></script>     
-        <script src="static/js/jquery.bootstrap.min.js"></script> 
-        <script src="dwr/engine.js"></script>
-      	 <script src="dwr/interface/AdminManager.js"></script>
-        <script src="static/js/admin.js"></script>
+        <script src="../static/js/jquery.min.js"></script>
+        <script src="../static/js/bootstrap.min.js"></script>     
+        <script src="../static/js/jquery.bootstrap.min.js"></script> 
+        <script src="../dwr/engine.js"></script>
+      	 <script src="../dwr/interface/AdminManager.js"></script>
+        <script src="../static/js/admin.js"></script>
     </head>
     <body>
         <div id="main-container" class="container">
