--- a/WebContent/admin/add.html
+++ b/WebContent/admin/add.html
@@ -4,26 +4,26 @@
         <meta charset="UTF-8">
         <title>Add a Blog</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link rel="Shortcut Icon" href="static/images/favicon.ico">
-        <link href="static/css/bootstrap.min.css" rel="stylesheet">
-        <link href="static/css/summernote.min.css" rel="stylesheet">
-        <link href="static/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
-        <link href="static/css/font-awesome.min.css" rel="stylesheet">
-        <link href="static/css/summernote.min.css" rel="stylesheet">
-        <link href="static/css/mengular.css" rel="stylesheet">
-        <link href="static/css/add.css" rel="stylesheet">
-        <script src="static/js/jquery.min.js"></script> 
-        <script src="static/js/jquery.bootstrap.min.js"></script>
-        <script src="static/js/bootstrap-datetimepicker.min.js"></script>
-        <script src="static/js/bootstrap-datetimepicker.zh-CN.js"></script>
-        <script src="static/js/bootstrap.min.js"></script> 
-        <script src="static/js/summernote.min.js"></script>
-        <script src="static/js/mengular-2.0.js"></script>
-        <script src="static/js/tools.js"></script>
-        <script src="dwr/engine.js"></script>
-        <script src="dwr/interface/AdminManager.js"></script>
-        <script src="dwr/interface/BlogManager.js"></script>
-        <script src="static/js/add.js"></script>
+        <link rel="Shortcut Icon" href="../static/images/favicon.ico">
+        <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../static/css/summernote.min.css" rel="stylesheet">
+        <link href="../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+        <link href="../static/css/font-awesome.min.css" rel="stylesheet">
+        <link href="../static/css/summernote.min.css" rel="stylesheet">
+        <link href="../static/css/mengular.css" rel="stylesheet">
+        <link href="../static/css/add.css" rel="stylesheet">
+        <script src="../static/js/jquery.min.js"></script> 
+        <script src="../static/js/jquery.bootstrap.min.js"></script>
+        <script src="../static/js/bootstrap-datetimepicker.min.js"></script>
+        <script src="../static/js/bootstrap-datetimepicker.zh-CN.js"></script>
+        <script src="../static/js/bootstrap.min.js"></script> 
+        <script src="../static/js/summernote.min.js"></script>
+        <script src="../static/js/mengular-2.0.js"></script>
+        <script src="../static/js/tools.js"></script>
+        <script src="../dwr/engine.js"></script>
+        <script src="../dwr/interface/AdminManager.js"></script>
+        <script src="../dwr/interface/BlogManager.js"></script>
+        <script src="../static/js/add.js"></script>
     </head>
     <body>
         <div class="container">
@@ -39,8 +39,8 @@
                             <li class="active"><a href="add.html">Add</a></li>
                         </ul>
                         <ul id="list-nav" class="nav navbar-nav navbar-right">
-                            <li><a href="blogs.html" target="_blank">Blogs</a></li>
-                            <li><a href="LogoutServlet?task=adminLogout">Exit</a></li>
+                            <li><a href="../blogs.html" target="_blank">Blogs</a></li>
+                            <li><a href="../LogoutServlet?task=adminLogout">Exit</a></li>
                         </ul>
                     </div>
                 </div>
