--- a/WebContent/admin/list.html
+++ b/WebContent/admin/list.html
@@ -4,22 +4,22 @@
         <meta charset="UTF-8">
         <title>Manage My Blogs</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link rel="Shortcut Icon" href="static/images/favicon.ico">
-        <link href="static/css/bootstrap.min.css" rel="stylesheet">
-        <link href="static/css/font-awesome.min.css" rel="stylesheet">
-        <link href="static/css/summernote.min.css" rel="stylesheet">
-        <link href="static/css/mengular.css" rel="stylesheet">
-        <link href="static/css/list.css" rel="stylesheet">
-        <script src="static/js/jquery.min.js"></script> 
-        <script src="static/js/jquery.bootstrap.min.js"></script>
-        <script src="static/js/bootstrap.min.js"></script> 
-        <script src="static/js/summernote.min.js"></script>
-        <script src="static/js/mengular-2.0.js"></script>
-        <script src="static/js/tools.js"></script>
-        <script src="dwr/engine.js"></script>
-        <script src="dwr/interface/AdminManager.js"></script>
-        <script src="dwr/interface/BlogManager.js"></script>
-        <script src="static/js/list.js"></script>
+        <link rel="Shortcut Icon" href="../static/images/favicon.ico">
+        <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../static/css/font-awesome.min.css" rel="stylesheet">
+        <link href="../static/css/summernote.min.css" rel="stylesheet">
+        <link href="../static/css/mengular.css" rel="stylesheet">
+        <link href="../static/css/list.css" rel="stylesheet">
+        <script src="../static/js/jquery.min.js"></script> 
+        <script src="../static/js/jquery.bootstrap.min.js"></script>
+        <script src="../static/js/bootstrap.min.js"></script> 
+        <script src="../static/js/summernote.min.js"></script>
+        <script src="../static/js/mengular-2.0.js"></script>
+        <script src="../static/js/tools.js"></script>
+        <script src="../dwr/engine.js"></script>
+        <script src="../dwr/interface/AdminManager.js"></script>
+        <script src="../dwr/interface/BlogManager.js"></script>
+        <script src="../static/js/list.js"></script>
     </head>
     <body>
         <div class="container">
@@ -36,8 +36,8 @@
                         </ul>
                         <ul id="list-nav" class="nav navbar-nav navbar-right">
                         	<li><a href="javascript:void(0)"onclick="regenerate()">Regenerate</a></li>
-                            <li><a href="blogs.html" target="_blank">Blogs</a></li>
-                            <li><a href="LogoutServlet?task=adminLogout">Exit</a></li>
+                            <li><a href="../blogs.html" target="_blank">Blogs</a></li>
+                            <li><a href="../LogoutServlet?task=adminLogout">Exit</a></li>
                         </ul>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                 <div id="${bid}$" class="list-group-item mengular-template blog-list-template">
                     <div class="row">
                         <div class="col-xs-12 col-sm-2">${date}$</div>
-                        <div class="col-xs-12 col-sm-8"><a href="blogs/${bid}$" target="_blank"><span class="blog-list-title">${title}$</span></a></div>
+                        <div class="col-xs-12 col-sm-8"><a href="../blogs/${bid}$" target="_blank"><span class="blog-list-title">${title}$</span></a></div>
                         <div class="col-xs-12 col-sm-2">
                             <a href="edit.html?bid=${bid}$" class="blog-accessory"><i class="fa fa-gear fa-lg text-success"></i></a>
                             <span class="blog-list-delete"><i class="fa fa-trash-o fa-lg text-danger blog-accessory"></i></span>
