管理员管理博文分类；博文列表页加入博文分类下拉菜单

--- a/WebContent/admin/add.html
+++ b/WebContent/admin/add.html
@@ -61,7 +61,7 @@
                     <div class="input-group">
                         <span class="input-group-addon form-icon"><i class="fa fa-clipboard fa-lg"></i></span>
                         <select id="add-blog-type" class="form-control">
-                            <option value="null">Select a Type</option>
+                            <option value="">Select a type for this blog</option>
                         </select>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                     <button id="add-blog-clear" class="btn btn-block btn-default">Clear</button>
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-1">
-                    <button id="add-blog-submit" class="btn btn-block btn-success">Create</button>
+                    <button id="add-blog-submit" class="btn btn-block btn-success">Save</button>
                 </div>
                 <div class="col-xs-12">
                      <div id="add-blog-content"></div>
