--- a/WebContent/admin/list.html
+++ b/WebContent/admin/list.html
@@ -51,9 +51,13 @@
             <div id="blog-list" class="list-group">
                 <div id="${bid}$" class="list-group-item mengular-template blog-list-template">
                     <div class="row">
-                        <div class="col-xs-12 col-sm-2">${date}$</div>
-                        <div class="col-xs-12 col-sm-8"><a href="../blogs/${bid}$" target="_blank"><span class="blog-list-title">${title}$</span></a></div>
+                        <div class="col-xs-12 col-sm-2"><h5>${date}$</h5></div>
+                        <div class="col-xs-12 col-sm-8">
+                            <p class="blog-type-tname"><small class="text-muted">${tname}$</small></p>
+                            <a href="../blogs/${bid}$" target="_blank"><span class="blog-list-title">${title}$</span></a>
+                        </div>
                         <div class="col-xs-12 col-sm-2">
+                        	<div class="hidden-xs"></div>
                             <a href="edit.html?bid=${bid}$" class="blog-accessory"><i class="fa fa-gear fa-lg text-success"></i></a>
                             <span class="blog-list-delete"><i class="fa fa-trash-o fa-lg text-danger blog-accessory"></i></span>
                             <span class="blog-accessory"><strong class="text-warning">${readers}$</strong> readers</span>
