--- a/WebContent/admin/edit.html
+++ b/WebContent/admin/edit.html
@@ -22,6 +22,7 @@
         <script src="../dwr/engine.js"></script>
         <script src="../dwr/interface/BlogManager.js"></script>
         <script src="../dwr/interface/AdminManager.js"></script>
+        <script src="../dwr/interface/TypeManager.js"></script>
         <script src="../static/js/edit.js"></script>
     </head>
     <body>
@@ -35,6 +36,7 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul id="list-nav" class="nav navbar-nav logined-btn">
                             <li><a href="list.html">List</a></li>
+                            <li><a href="types.html">Type</a></li>
                             <li><a href="add.html">Add</a></li>
                         </ul>
                         <ul id="list-nav" class="nav navbar-nav navbar-right">
@@ -48,22 +50,28 @@
                 <h3 class="text-center text-muted">Edit Blog</h3>
             </div>
             <div id="edit-blog-div" class="row">
-                <div class="col-xs-12 col-sm-5 col-md-7">
+                <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="input-group">
                         <span class="input-group-addon form-icon"><i class="fa fa-font fa-lg"></i></span>
                         <input id="edit-blog-title" type="text" class="form-control" placeholder="Blog Title">
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-3 col-md-3">
+                <div class="col-xs-12 col-sm-6 col-md-3">
+                    <div class="input-group">
+                        <span class="input-group-addon form-icon"><i class="fa fa-clipboard fa-lg"></i></span>
+                        <select id="edit-blog-type" class="form-control"></select>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="input-group">
                         <span class="input-group-addon form-icon"><i class="fa fa-calendar fa-lg"></i></span>
                         <input id="edit-blog-date" type="text" class="form-control" placeholder="Create Date" readonly>
                     </div>
                 </div>
-                <div class="col-xs-6 col-sm-2 col-md-1">
+                <div class="col-xs-6 col-sm-3 col-md-1">
                     <button id="edit-blog-clear" class="btn btn-block btn-default">Clear</button>
                 </div>
-                <div class="col-xs-6 col-sm-2 col-md-1">
+                <div class="col-xs-6 col-sm-3 col-md-1">
                     <button id="edit-blog-submit" class="btn btn-block btn-success">Save</button>
                 </div>
                 <div class="col-xs-12">
