--- a/WebContent/admin/types.html
+++ b/WebContent/admin/types.html
@@ -50,10 +50,10 @@
                 <div id="${tid}$" class="list-group-item mengular-template type-list-template">
                     <div class="row">
                         <div class="col-xs-12 col-sm-2">${date}$</div>
-                        <div class="col-xs-12 col-sm-8"><span class="blog-list-title">${tname}$</span></div>
+                        <div class="col-xs-12 col-sm-8"><span class="type-list-tname">${tname}$</span></div>
                         <div class="col-xs-12 col-sm-2">
-                            <i class="fa fa-gear fa-lg text-success type-accessory"></i>
-                            <span class="blog-list-delete"><i class="fa fa-trash-o fa-lg text-danger type-accessory"></i></span>
+                            <span class="type-list-modify"><i class="fa fa-gear fa-lg text-success type-accessory"></i></span>
+                            <span class="type-list-remove"><i class="fa fa-trash-o fa-lg text-danger type-accessory"></i></span>
                             <span class="type-accessory"><strong class="text-warning">${count}$</strong> blogs</span>
                         </div>
                     </div>
@@ -78,6 +78,28 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         <button id="add-type-submit" type="button" class="btn btn-primary">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="modify-type-modal" class="modal fade">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">Modify the Type</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="input-group">
+                            <span class="input-group-addon">
+                                <i class="fa fa-lg fa-font"></i>
+                            </span>
+                            <input id="modify-type-tname" type="text" class="form-control" placeholder="Name of Type">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button id="modify-type-submit" type="button" class="btn btn-primary">Save</button>
                     </div>
                 </div>
             </div>
