--- a/WebContent/admin/types.html
+++ b/WebContent/admin/types.html
@@ -50,7 +50,7 @@
                 <div id="${tid}$" class="list-group-item mengular-template type-list-template">
                     <div class="row">
                         <div class="col-xs-12 col-sm-2">${date}$</div>
-                        <div class="col-xs-12 col-sm-8"><span class="type-list-tname">${tname}$</span></div>
+                        <div class="col-xs-12 col-sm-8"><a href="list.html?tid=${tid}$" class="type-list-tname">${tname}$</a></div>
                         <div class="col-xs-12 col-sm-2">
                             <span class="type-list-modify"><i class="fa fa-gear fa-lg text-success type-accessory"></i></span>
                             <span class="type-list-remove"><i class="fa fa-trash-o fa-lg text-danger type-accessory"></i></span>
