使用popstate还原浏览器前进后退历史记录

--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -37,6 +37,10 @@
 		<div class="container">
 			<div id="search-header" class="page-header">
 				<div class="row">
+					<div class="col-md-9">
+						<input id="search-blog" type="text" placeholder="Search Title" class="text-info text-center">
+						<i id="search-cancel" class="fa fa-times-circle-o fa-lg pull-right text-muted"></i>
+					</div>
 					<div class="col-md-3">
 						<div id="type-list" class="btn-group">
 							<button type="button" class="btn btn-default btn-block dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -48,10 +52,6 @@
 								<li role="separator" class="divider"></li>
 							</ul>
 						</div>
-					</div>
-					<div class="col-md-9">
-						<input id="search-blog" type="text" placeholder="Search Title" class="text-info text-center">
-						<i id="search-cancel" class="fa fa-times-circle-o fa-lg pull-right text-muted"></i>
 					</div>
 				</div>
 			</div>
@@ -75,7 +75,7 @@
 		</div>
 		<div class="copy-right text-center">
 			<div class="container">
-				<p>Made by Meng Li. <a href="admin.html" target="_blank">Manage My Blog</a></p>
+				<p>Made by Meng Li. <a href="admin" target="_blank">Manage My Blog</a></p>
 				<label>Copyright of Meng Li @ 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
 			</div>
 		</div>
