--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -106,7 +106,7 @@
 		</div>
 		<div class="copy-right text-center">
 			<div class="container">
-				<p>Made by Meng Li. <a href="admin.html" target="_blank">Manage My Blog</a></p>
+				<p>Made by Meng Li. <a href="admin" target="_blank">Manage My Blog</a></p>
 				<label>Copyright of Meng Li @ 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
 			</div>
 		</div>
